theme button alignment issue fixed

--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -31,7 +31,7 @@
     position: absolute;
     z-index: 1;
     color: var(--clr-secondary);
-    top: 7%;
+    top: 8%;
     left: 5%;
     font-size: 1.2rem;
 
